# black_hole

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  相关公式.md
cmake/: compiler_warnings.cmake  glad.cmake  imgui.cmake
src/: main.cpp
src/app/: app.cpp  app.hpp
src/shader/: black_hole.frag  fullscreen.vert  room_raytrace.frag
tests/: CMakeLists.txt  string_utils_test.cpp
